Fixed alignment of force sliders

--- a/css/hybrid-map.less
+++ b/css/hybrid-map.less
@@ -7,14 +7,18 @@
 6   768     1024    P iPad
 7   1024    768
 */
-@font1Size: 14px;
-@statesStrokeColor:   white;
-@statesStrokeWidth:   2px;
-@gradesStrokeColor:   black;
-@gradesStrokeWidth:   0px;
-@hoverStrokeColor:    black;
-@hoverStrokeWidth:    0px;
-@hoverFillColor:      white;
+@font1Size:         14px;
+@statesStrokeColor: white;
+@statesStrokeWidth: 2px;
+@gradesStrokeColor: black;
+@gradesStrokeWidth: 0px;
+@hoverStrokeColor:  black;
+@hoverStrokeWidth:  0px;
+@hoverFillColor:    white;
+
+@labelSmallWidth:   80px;
+@labelMediumWidth:  180px;
+@debugSliderWidth:  200px;
 
 body {
     margin: 0px;
@@ -25,7 +29,6 @@ body {
 #box0 {
     display: inline-block;
     text-align: center;
-    // outline: 1px solid orange;
     > * {
         font-size: @font1Size;
     }
@@ -33,7 +36,6 @@ body {
 #box1 {
     display: inline-block;
     vertical-align: top;
-    // outline: 1px solid blue;
     > * {
         font-size: @font1Size;
     }
@@ -85,6 +87,34 @@ body {
 }
 #states-select {
     height: 25px;
+}
+.force-div {
+    display: inline-block;
+    width: @labelMediumWidth + 3*@labelSmallWidth + @debugSliderWidth;
+    font-size: 0px !important;
+    > * {
+        font-size: @font1Size;
+    }
+    div {
+        display: inline-block;
+    }
+    label {
+        display: inline-block;
+        text-align: center;
+        font-family: Helvetica;
+        font-size: 18px;
+        color: black;
+        &.label-small {
+            width: @labelSmallWidth;
+        }
+        &.label-medium {
+            width: @labelMediumWidth
+        }
+    }
+    input[type='Range'] {
+        width: @debugSliderWidth;
+        margin: 0px;
+    }
 }
 #info-svg {
     text-align: center;
